--- a/yarn-workspace-example/package.json
+++ b/yarn-workspace-example/package.json
@@ -5,7 +5,7 @@
     "start": "ts-node src/index.ts"
   },
   "dependencies": {
-    "axios": "^1.2.0",
+    "axios": "1.2.0",
     "koa": "^2.14.1"
   },
   "devDependencies": {
